--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
-Package: windshed
+Package: windscape
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Landscape connectivity by wind
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Matthew Kling
+Maintainer: Matthew Kling <mattkling@gmail.com>
+Description: This package implements a set of functions to convert wind data
+    into landscape connectivity graphs and model predicted dispersal patterns.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
