--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,9 @@ Author: Matthew Kling
 Maintainer: Matthew Kling <mattkling@gmail.com>
 Description: This package implements a set of functions to convert wind data
     into landscape connectivity graphs and model predicted dispersal patterns.
-License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+License: GPL (>= 2)
+Imports: Rcpp (>= 1.0.0)
+LinkingTo: Rcpp
+RoxygenNote: 6.1.1
