--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,6 @@ LinkingTo: Rcpp
 Imports: 
     Rcpp,
     raster,
-    gdistance,
     geosphere
 RoxygenNote: 7.2.3
 URL: https://matthewkling.github.io/windscape/
@@ -21,6 +20,11 @@ Suggests:
     knitr,
     lubridate,
     ncdf4,
+    purrr,
     rmarkdown,
-    terra
+    stringr
 VignetteBuilder: knitr
+Depends: 
+    gdistance,
+    R (>= 2.10),
+    terra
