--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: windscape
 Type: Package
 Title: Landscape connectivity by wind
-Version: 1.0.0
+Version: 1.1.0
 Author: Matthew Kling
 Maintainer: Matthew Kling <mattkling@gmail.com>
-Description: This package implements a set of functions to convert wind data
-    into landscape connectivity graphs and model predicted dispersal patterns.
+Description: Import and visualize wind data, model landscape connectivity by
+    wind dispersal, and test statistical relationships between wind and 
+    ecological data.
 Encoding: UTF-8
 LazyData: true
 License: GPL (>= 2)
