add particle trails function and related changes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,7 @@ Collate:
     'pairwise_matrices.R'
     'wind_rose.R'
     'plot.R'
+    'particles.R'
     'random_walk.R'
     'rose.R'
     'utils.R'
